# linkedin-cleanup

./: README.md  eda.ipynb  extract_search_results.py  extract_search_results.sh  identify_connections.ipynb  linkedin_cleanup.py  load_urls_to_db.sh  main.py  pyproject.toml  remove_connections.py  remove_connections.sh
linkedin_cleanup/: __init__.py  config.py  connection_remover.py  constants.py  db.py  linkedin_client.py  logging_config.py  random_actions.py  retry.py  search_extractor.py  utils.py
linkedin_cleanup/js_extractors/: __init__.py  profile_extractor.js
notebooks/: identify_connections.ipynb
scripts/: __init__.py  extract_search_results.py  load_urls_to_db.py  remove_connections.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_connection_removal.py  test_db.py  test_random_actions.py  test_retry.py  test_search_extraction.py  test_utils.py
